crates/infinity-agent-cli/tests/snapshots/tui_flow_snapshots__ansi_sanitized.snap
---
source: crates/infinity-agent-cli/tests/tui_flow_snapshots.rs
expression: h.screen_with_scrollback()
---
~ 
~ 
~ 
~ 
~ 
~ 
~ 
~ 
~ 
~ 
~ 
~ 
~ 
~ 
~ Infinity Agent CLI
~ Type your messages below. /help for commands. Ctrl+C to exit.
~ 
~ > run something noisy
~ ◆ execute_command(noisy)
┌────────────────────────────────────────────────────────────────────────────────┐
│✓ red line                                                                      │
│  charsetdesignation                                                            │
│  cursor jump                                                                   │
│                                                                                │
│⚡noisy:                                                                        │
│  tick green                                                                    │
│  second line                                                                   │
│                                                                                │
│▄▄▄▄▄▄▄▄▄▄                                                                      │
│────────────────────────────────────────────────────────────────────────────────│
│                                                                                │
│                                                                                │
│                                                                                │
│mock-model (/help for commands)                                  0% context used│
└────────────────────────────────────────────────────────────────────────────────┘
cursor: row=11 col=1
