crates/infinity-agent-cli/tests/snapshots/tui_flow_snapshots__command_feedback.snap
---
source: crates/infinity-agent-cli/tests/tui_flow_snapshots.rs
expression: h.screen()
---
┌────────────────────────────────────────────────────────────────────────────────┐
│                                                                                │
│                                                                                │
│Infinity Agent CLI                                                              │
│Type your messages below. /help for commands. Ctrl+C to exit.                   │
│                                                                                │
│✦ Compaction triggered                                                          │
│No active session to stop                                                       │
│No active session to archive                                                    │
│                                                                                │
│────────────────────────────────────────────────────────────────────────────────│
│                                                                                │
│                                                                                │
│                                                                                │
│mock-model (/help for commands)                                  0% context used│
└────────────────────────────────────────────────────────────────────────────────┘
cursor: row=11 col=1
