crates/infinity-agent-cli/tests/snapshots/tui_flow_snapshots__diff_tool_result.snap
---
source: crates/infinity-agent-cli/tests/tui_flow_snapshots.rs
expression: h.screen_with_scrollback()
---
~ 
~ 
~ 
~ 
~ 
~ 
~ 
~ 
~ 
~ 
~ 
~ 
~ 
~ 
~ 
~ 
~ 
~ 
┌────────────────────────────────────────────────────────────────────────────────┐
│Infinity Agent CLI                                                              │
│Type your messages below. /help for commands. Ctrl+C to exit.                   │
│                                                                                │
│> edit the file                                                                 │
│◆ edit_file(main.rs) ✓                                                          │
│  @@ -1,3 +1,3 @@                                                               │
│   fn main() {                                                                  │
│  -    println!("old");                                                         │
│  +    println!("new");                                                         │
│   }                                                                            │
│                                                                                │
│                                                                                │
│██████████ waiting for tool call result                                         │
│────────────────────────────────────────────────────────────────────────────────│
│                                                                                │
│                                                                                │
│                                                                                │
│mock-model (/help for commands)                                  0% context used│
└────────────────────────────────────────────────────────────────────────────────┘
cursor: row=15 col=1
