crates/infinity-agent-cli/tests/snapshots/tui_flow_snapshots__empty_tool_result.snap
---
source: crates/infinity-agent-cli/tests/tui_flow_snapshots.rs
expression: h.screen_with_scrollback()
---
~ 
~ 
~ 
~ 
~ 
~ 
~ 
~ 
~ 
~ 
~ 
~ 
~ 
~ 
~ 
~ 
~ 
~ 
~ Infinity Agent CLI
┌────────────────────────────────────────────────────────────────────────────────┐
│Type your messages below. /help for commands. Ctrl+C to exit.                   │
│                                                                                │
│> edit the file                                                                 │
│◆ edit_file(main.rs) ✓                                                          │
│  @@ -1,3 +1,3 @@                                                               │
│   fn main() {                                                                  │
│  -    println!("old");                                                         │
│  +    println!("new");                                                         │
│   }                                                                            │
│                                                                                │
│◆ set_title({"title":"t"}) ✓                                                    │
│                                                                                │
│                                                                                │
│────────────────────────────────────────────────────────────────────────────────│
│                                                                                │
│                                                                                │
│                                                                                │
│/help for commands                                 mock: mock-model · 0% context│
└────────────────────────────────────────────────────────────────────────────────┘
cursor: row=15 col=1
