crates/infinity-agent-cli/tests/snapshots/tui_flow_snapshots__first_choice_shown.snap
---
source: crates/infinity-agent-cli/tests/tui_flow_snapshots.rs
assertion_line: 307
expression: h.screen()
---
┌────────────────────────────────────────────────────────────────────────────────┐
│                                                                                │
│                                                                                │
│                                                                                │
│                                                                                │
│Infinity Agent CLI                                                              │
│Type your messages below. /help for commands. Ctrl+C to exit.                   │
│                                                                                │
│                                                                                │
│────────────────────────────────────────────────────────────────────────────────│
│ First question?                                                                │
│ ▸ Yes (default)                                                                │
│   No                                                                           │
│                                                                                │
│                                                                                │
│                                                                                │
│↑↓ navigate  enter select  esc default             mock: mock-model · 0% context│
└────────────────────────────────────────────────────────────────────────────────┘
cursor: row=6 col=0 (hidden)
