crates/infinity-agent-cli/tests/snapshots/tui_flow_snapshots__lazy_new_session.snap
---
source: crates/infinity-agent-cli/tests/tui_flow_snapshots.rs
assertion_line: 283
expression: h.screen()
---
┌────────────────────────────────────────────────────────────────────────────────┐
│Infinity Agent CLI                                                              │
│Type your messages below. /help for commands. Ctrl+C to exit.                   │
│                                                                                │
│                                                                                │
│✦ Loading session — thread current-session-01                                   │
│> hi                                                                            │
│✦ Lazily creating a new session                                                 │
│                                                                                │
│                                                                                │
│────────────────────────────────────────────────────────────────────────────────│
│                                                                                │
│                                                                                │
│                                                                                │
│/help for commands                                 mock: mock-model · 0% context│
└────────────────────────────────────────────────────────────────────────────────┘
cursor: row=11 col=1
