crates/infinity-agent-cli/tests/snapshots/tui_flow_snapshots__picker_after_update.snap
---
source: crates/infinity-agent-cli/tests/tui_flow_snapshots.rs
expression: h.screen()
---
┌────────────────────────────────────────────────────────────────────────────────┐
│                                                                                │
│                                                                                │
│                                                                                │
│                                                                                │
│Infinity Agent CLI                                                              │
│Type your messages below. /help for commands. Ctrl+C to exit.                   │
│                                                                                │
│Existing sessions found, /load or Ctrl+L to load.                               │
│                                                                                │
│────────────────────────────────────────────────────────────────────────────────│
│ Brand new session                      running     300tok  2025-01-03T00:00:00Z│
│ Renamed title                             idle     200tok  2025-01-02T00:00:00Z│
│                                                                                │
│↑↓ navigate  enter select  esc cancel                            0% context used│
└────────────────────────────────────────────────────────────────────────────────┘
cursor: row=7 col=49 (hidden)
